# study-node

./: .gitattributes  .gitignore  README.md  clean.js  cspell.json
basic/: .eslintrc.cjs  .gitignore  .mocharc.json  boolean.js  collection.js  eslint.config.js  function-es5.js  function-es6.js  hello.js  index.js  iterator.js  jest.config.js  json.js  package-lock.json  package.json  pnpm-lock.yaml
basic/.history/: package.json.json
basic/addon/: CMakeLists.txt  README.md
basic/addon/cmake-js/: CMakeLists.txt  demo.cc  demo.cjs  demo.js  demo.spec.js  package.json
basic/addon/napi/: CMakeLists.txt  README.md  arguments.c  arguments.cc  arguments.js  binding.gyp  builder.c  builder.cc  builder.js  callback.cc  callback.js  common.h  function.c  function.js  napi.spec.js  node-addon-api.spec.js  object.c  object.cc  object.js  package-lock.json  package.json  simple.c  simple.cc  simple.js
basic/addon/napi-rust/: Cargo.toml  README.md  index.cjs  index.d.ts  index.spec.js  package.json
basic/addon/napi-rust/npm/darwin-x64/: package.json
basic/addon/napi-rust/npm/linux-x64-gnu/: package.json
basic/addon/napi-rust/npm/win32-x64-msvc/: package.json
basic/addon/napi-rust/src/: class.rs  const.rs  func.rs  lib.rs
basic/addon/node-addon-api/: CMakeLists.txt  arguments.cc  binding.gyp  builder.cc  callback.cc  function.cc  node-addon-api.spec.js  object.cc  package.json  simple.cc
basic/addon/node-api/: CMakeLists.txt  README.md  arguments.js  binding.gyp  builder.js  callback.c  callback.js  function.js  napi.spec.js  object.js  package.json  simple.js
basic/basic/: array.spec.js  async.spec.js  basic.spec.js  func.spec.js  iter.spec.js  module.spec.js  types.spec.js
basic/core/: array.spec.js  func.spec.js  generator.spec.js  iter.spec.js  json.spec.js  module.spec.js  object.spec.js  symbol.spec.js  types.spec.js
basic/coroutine/: callback.spec.js  event.spec.js  promise.spec.js  waiting.js
basic/http/: client.js  http.spec.js  server.js
basic/io/: buffer.spec.js  dataview.spec.js  file.js  fs.spec.js  fstream.js  fstream.spec.js  glob.spec.js  io.spec.js  path.spec.js
basic/module/: bin.js  package.json
basic/modules/: index.js
basic/notebook/: README.md  async.ipynb  basic.ipynb  collection.ipynb  function.ipynb  io.ipynb  module.ipynb  requirements.txt
basic/process/: child-process.js  exec.spec.js  fork.spec.js  spawn.spec.js
basic/src/: async.spec.js  basic.ipynb  basic.spec.js  collection.js  collection.spec.js  es6.js  function.ipynb  function.spec.js  http.ipynb  http.spec.js  io.ipynb  io.spec.js  json.js  module.spec.js  oop-es5.js  oop-es6.js  require.js
basic/threading/: broadcast.js  channel.js  event.js  message-port.js  message.js  thread.spec.js  woker.spec.js  worker.js
electron/: .eslintignore  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.base.config.ts  vite.main.config.ts  vite.renderer.config.ts
electron/src/: App.vue  main.scss  main.ts  renderer.ts  routes.ts
es6/: README.md  index.js  package-lock.json  package.json
es6/app/: index.js
express/: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  README.md  app.js  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.babel.js  webpack.config.js
express/.history/: webpack.config.js.json
express/asset/: tsconfig.json
express/conf/: conf.js
express/controller/: menu.js  route.js
express/view/: component.html  layout.html
gulp/: .gitignore  README.md  bower.json  clear.sh  gulpfile.js  package.json
gulp/gulp_tasks/: clean.js  config.js  css-bundle.js  css-folder-bundle.js  js-bundle.js  list-path.js  manifest.js  static.js  watch.js
gulp/template/: component.html  layout.html
gulp/www/: app.js
http/: README.md  ejs.js  http.js  jade.js  nunjucks.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  url.js
http/ejs-views/: render.ejs
http/jade-views/: attribs.jade  client.txt  code.jade  render.jade  template.jade
http/nunjucks-views/: code.html  components.html  render.html  scripts.html  template.html
http/views/: GET_new.jade
io/: README.md  buffer.js  file.js  glob.js  package.json  promise.js  stream.js
lang/babel/: .mocharc.json  babel.build.config.cjs  babel.config.cjs  package.json  pnpm-lock.yaml
lang/cjs/: README.md
lang/commonjs/: package.json
lang/es6/: .babelrc.json  .eslintrc.js  .mocharc.json  babel.config.build.js  babel.config.js  package.json  pnpm-lock.yaml
lang/es6-cjs/: index.js  pnpm-lock.yaml
lang/es6-commonjs/: babel.config.build.js  babel.config.js  eslint.config.mjs  pnpm-lock.yaml
lang/es6-module/: package.json
lang/esm/: .mocharc.json  README.md  eslint.config.mjs  index.js  package.json  pnpm-lock.yaml
lang/ts/: .eslintrc.cjs  .eslintrc.js  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
lodash/: README.md  lodash.js  package.json
modular_file/: .eslintrc.cjs  .gitignore  .mocharc.esm.json  package.json  pnpm-lock.yaml  tsconfig.esm.json  tsconfig.json  tsconfig.lint.json
modular_file/src/: index.ts
nextjs/: README.md  bun.lockb  eslint.config.js  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
nextjs/pages/: _app.tsx  index.tsx
npm/: index.js  pacakge_json.md  package-lock.json  package.json
orm/: .eslintrc.js  README.md  orm.js  package-lock.json  package.json  pnpm-lock.yaml  tables.sql  tsconfig.json
orm/db/: conn.js
orm/domain/: entity.js
orm/notebook/: requirements.txt
orm/prisma/: .env  .eslintrc.cjs  .gitignore  .mocharc.json  README.md  bun.lockb  eslint.config.js  (+7 more)
package/: README.md  package-lock.json  package.json
test/: README.md  package.json
testing/: README.md  package-lock.json  package.json
thirdpart/: README.md
toolkit/: README.md
typescript/: .gitignore  README.md  index.ts  package-lock.json  package.json  tsconfig.json
yarn/: README.md  index.js  package.json
(+898 files in other folders)
